<resources>
    <!-- Nombre provisional-->
    <string name="app_name">Contador</string>
    <string name="todo">TODO</string>
    <string name="crear"> Crear </string>
    <string name="introducirDatos">Introducir datos</string>
    <string name="nuevoProyecto">Nuevo Proyecto</string>
    <string name="editarProyecto">Editar Proyecto</string>
    <string name="anadirComponentes">Añadir Componente</string>
    <string name="testEditarComponentes">Test Editar Componente</string>
    <string name="abrirPantalla3">Test Pantalla 3</string>
    <string name="pantalla3">Test Pantalla 3</string>
    <string name="guardarCambios">Guardar Cambios</string>
    <string name="nombreNuevoProyecto">Nombre del nuevo proyecto</string>
    <string name="comienzo">Fecha de comienzo</string>
    <string name="fin">Fecha de finalización</string>
    <string name="unidades">Unidades</string>
    <string name="factor">Escriba el factor</string>
    <string name="valor">Valor de las unidades extra</string>
    <string name="nuevoNombreProyecto">Nuevo nombre del proyecto</string>
    <string name="crearComponente">Crear componente</string>
    <string name="finUnidades">Finalización (Unidades)</string>
    <string name="comienzoUnidades">Comienzo (Unidades)</string>
    <string name="nombreNuevoComponente">Nombre del proyecto</string>
    <string name="nuevoNombreComponente">Nuevo nombre del componente</string>
    <string name="editarComponente">Editar componente</string>
    <string name="borrarProyecto">Borrar proyecto</string>
    <string name="borrarComponente">Borrar componente</string>
    <string name="borrarComponentes">Borrar todos los componentes del proyecto</string>
    <string name="tipoNuevoComponente">Tipo del nuevo componente</string>
    <string name="numeroNuevoComponente">Número del nuevo componente</string>
    <string name="precio">Precio del nuevo componente</string>
    <string name="id_fk">Escriba el id del proyecto</string>
</resources>